@@ -1,3 +1,9 @@
+2007-04-05  Dan Williams  <dcbw@redhat.com>
+
+	* src/NetworkManager.c
+		- (fixup_hostname): ensure local hostname is first; write to a temp file
+			then atomically rename to /etc/hosts
+
 2007-04-04  Dan Williams  <dcbw@redhat.com>
 
 	* src/nm-device-802-11-mesh-olpc.c
